<resources>
    <string name="app_name" translatable="false">Champion Wiki</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="by">by</string>
    <string name="developer_name">Wahyu Wiyoko</string>
    <string name="repository">GitHub</string>
    <string name="view_the_source_code">View the source code</string>
    <string name="source_code_link">https://github.com/wahyuwiyoko/ChampionWiki</string>
    <string name="license">License</string>
    <string name="license_type">MIT License</string>
    <string name="license_link">https://github.com/wahyuwiyoko/ChampionWiki/blob/main/LICENSE</string>
    <string name="no_browser">Install a browser to open the link!</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="placeholder_about">vX.X.X by Developer</string>
    <string name="placeholder_name">Champion Name</string>
    <string name="placeholder_subtitle">Champion Subtitle</string>
    <string name="placeholder_description">Champion Description</string>
    <string name="placeholder_abilities">Abilities</string>
    <string name="placeholder_passive">Passive</string>
    <string name="placeholder_first_ability">First Ability</string>
    <string name="placeholder_second_ability">Second Ability</string>
    <string name="placeholder_third_ability">Third Ability</string>
    <string name="placeholder_fourth_ability">Fourth Ability</string>
    <string name="placeholder_passive_description">Passive Description</string>
    <string name="placeholder_first_ability_description">First Ability Description</string>
    <string name="placeholder_second_ability_description">Second Ability Description</string>
    <string name="placeholder_third_ability_description">Third Ability Description</string>
    <string name="placeholder_fourth_ability_description">Fourth Ability Description</string>
    <string-array name="champion_name">
        <item>Draven</item>
        <item>Darius</item>
        <item>Yasuo</item>
        <item>Yone</item>
        <item>Akshan</item>
        <item>Fiora</item>
        <item>Pantheon</item>
        <item>Gwen</item>
        <item>Pyke</item>
        <item>Thresh</item>
    </string-array>
    <string-array name="champion_subtitle">
        <item>The Glorious Executioner</item>
        <item>The Hand of Noxus</item>
        <item>The Unforgiven</item>
        <item>The Unforgotten</item>
        <item>The Rogue Sentinel</item>
        <item>The Grand Duelist</item>
        <item>The Unbreakable Spear</item>
        <item>The Hallowed Seamstress</item>
        <item>The Bloodharbor Ripper</item>
        <item>The Chain Warden</item>
    </string-array>
    <string-array name="champion_description">
        <item>
            In Noxus, warriors known as Reckoners face one another in arenas where blood is spilled
            and strength tested—but none has ever been as celebrated as Draven. A former soldier, he
            found that the crowds uniquely appreciated his flair for the dramatic, and his
            unparalleled skill with his spinning axes. Addicted to the spectacle of his own brash
            perfection, Draven has sworn to defeat whomever he must to ensure that his name is
            chanted throughout the empire forever more.
        </item>
        <item>
            There is no greater symbol of Noxian might than Darius, the nation\'s most feared and
            battle-hardened commander. Rising from humble origins to become the Hand of Noxus, he
            cleaves through the empire\'s enemies—many of them Noxians themselves. Knowing that he
            never doubts his cause is just, and never hesitates once his axe is raised, those who
            stand against the leader of the Trifarian Legion can expect no mercy.
        </item>
        <item>
            An Ionian of deep resolve, Yasuo is an agile swordsman who wields the air itself against
            his enemies. As a proud young man, he was falsely accused of murdering his master—unable
            to prove his innocence, he was forced to slay his own brother in self defense. Even
            after his master\'s true killer was revealed, Yasuo still could not forgive himself for
            all he had done, and now wanders his homeland with only the wind to guide his blade.
        </item>
        <item>
            In life, he was Yone—half-brother of Yasuo, and renowned student of his village\'s sword
            school. But upon his death at the hands of his brother, he found himself hunted by a
            malevolent entity of the spirit realm, and was forced to slay it with its own sword.
            Now, cursed to wear its demonic mask upon his face, Yone tirelessly hunts all such
            creatures in order to understand what he has become.
        </item>
        <item>
            Raising an eyebrow in the face of danger, Akshan fights evil with dashing charisma,
            righteous vengeance, and a conspicuous lack of shirts. He is highly skilled in the art
            of stealth combat, able to evade the eyes of his enemies and reappear when they least
            expect him. With a keen sense of justice and a legendary death-reversing weapon, he
            rights the wrongs of Runeterra\'s many scoundrels while living by his own moral.
        </item>
        <item>
            The most feared duelist in all Valoran, Fiora is as renowned for her brusque manner and
            cunning mind as she is for the speed of her bluesteel rapier. Born to House Laurent in
            the kingdom of Demacia, Fiora took control of the family from her father in the wake of
            a scandal that nearly destroyed them. House Laurent\'s reputation was sundered, but
            Fiora bends her every effort to restore her family\'s honor and return them to their
            rightful place among the great and good of Demacia.
        </item>
        <item>
            Once an unwilling host to the Aspect of War, Atreus survived when the celestial power
            within him was slain, refusing to succumb to a blow that tore stars from the heavens. In
            time, he learned to embrace the power of his own mortality, and the stubborn resilience
            that goes along with it. Atreus now opposes the divine as Pantheon reborn, his
            unbreakable will fueling the fallen Aspect\'s weapons on the field of battle.
        </item>
        <item>
            A former doll transformed and brought to life by magic, Gwen wields the very tools that
            once created her. She carries the weight of her maker\'s love with every step, taking
            nothing for granted. At her command is the Hallowed Mist, an ancient and protective
            magic that has blessed Gwen\'s scissors, needles, and sewing thread. So much is new to
            her, but Gwen remains joyfully determined to fight for the good that survives in a
            broken world.
        </item>
        <item>
            A renowned harpooner from the slaughter docks of Bilgewater, Pyke should have met his
            death in the belly of a gigantic jaull-fish… and yet, he returned. Now, stalking the
            dank alleys and backways of his former hometown, he uses his new supernatural gifts to
            bring a swift and gruesome end to those who make their fortune by exploiting others—and
            a city that prides itself on hunting monsters now finds a monster hunting them.
        </item>
        <item>
            Sadistic and cunning, Thresh is an ambitious and restless spirit of the Shadow Isles.
            Once the custodian of countless arcane secrets, he was undone by a power greater than
            life or death, and now sustains himself by tormenting and breaking others with slow,
            excruciating inventiveness. His victims suffer far beyond their brief mortal coil as
            Thresh wreaks agony upon their souls, imprisoning them in his unholy lantern to torture
            for all eternity.
        </item>
    </string-array>
    <string-array name="champion_url">
        <item>https://www.leagueoflegends.com/en-us/champions/draven/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/darius/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/yasuo/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/yone/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/akshan/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/fiora/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/pantheon/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/gwen/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/pyke/</item>
        <item>https://www.leagueoflegends.com/en-us/champions/thresh/</item>
    </string-array>
</resources>