<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:text="@string/about"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/version_and_developer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/about_title"
            app:layout_constraintStart_toStartOf="@+id/about_title"
            app:layout_constraintTop_toBottomOf="@+id/about_title"
            tools:text="@string/placeholder_about" />

        <LinearLayout
            android:id="@+id/repository_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/about_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/about_title"
            app:layout_constraintTop_toBottomOf="@id/version_and_developer">

            <TextView
                android:id="@+id/repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/source_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_the_source_code"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/license_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/about_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/about_title"
            app:layout_constraintTop_toBottomOf="@id/repository_view">

            <TextView
                android:id="@+id/license_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/license_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_type"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>